--- a/multi-step-form/src/index.css
+++ b/multi-step-form/src/index.css
@@ -3,6 +3,19 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    background-color: hsl(231, 100%, 99%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+
+  .active {
+    background-color: hsl(228, 100%, 84%);
+  }
 .main {
     display: flex;
     gap: 5rem;
@@ -16,6 +29,7 @@
 }
 
 
+
 .label {
     margin-bottom: 0.5rem;
     color: rgb(84, 84, 189);
@@ -25,20 +39,18 @@
     width: 100%;
     height: 2.2rem;
     border: 1px solid;
-    border-radius: 1rem;
-    -webkit-border-radius: 1rem;
-    -moz-border-radius: 1rem;
-    -ms-border-radius: 1rem;
-    -o-border-radius: 1rem;
+    border-radius: 0.5rem;
+    -webkit-border-radius: 0.5rem;
+    -moz-border-radius: 0.5rem;
+    -ms-border-radius: 0.5rem;
+    -o-border-radius: 0.5rem;
     outline: none;
-    
 }
 
 .checkbox-area {
     display: flex;
     width: 100%;
     height: 5rem;
-    background-color: bisque;
     gap: 1.5rem;
 }
 
@@ -69,9 +81,10 @@
     text-align: center;
     font-weight: bold;
     cursor: pointer;
+    color: hsl(206, 94%, 87%);
 }
 .btn-next {
-    background-color: blue;
+    background-color: hsl(213, 96%, 18%);
     width: 6rem;
     height: 2rem;
     border-radius: 0.5rem;
@@ -114,7 +127,7 @@
   }
   
   .step {
-    color: gray;
+    color:hsl(231, 11%, 63%)
   }
   
   .step-text {
@@ -129,8 +142,7 @@
   .btn-switch {
     margin-top: 3rem;
     width: 100%;
-  
-    background-color: aqua;
+
     
   }
   .plan {
@@ -188,7 +200,7 @@
 
 .slideThree:before {
     content: 'Yearly';
-    color: red;
+    color: yellow;
     position: absolute;
     left: 10px;
     z-index: 0;
